--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ a{ font-size: 25px;}
     width: 33.33333333%;
     margin-left: 2.5%;
     margin-right: 2.5%;
+    margin-bottom: 8%;
     text-align: left;
     border-radius: 50px;
 padding: 2%;    
@@ -67,3 +68,23 @@ h3{
 border-color: rgb(177, 223, 223);}
 #right-part{background-color: rgb(165, 194, 191);
 border-color:  rgb(165, 194, 191);}
+.width-half{ width: 50%;
+    padding-left: 10%;
+    padding-right: 2%;
+    
+}
+#background2{
+    background-image: url(shape-1.png);
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: left;
+    margin-left: 5%;
+
+}
+.width-half img{width: 100% ;
+
+}
+h2{
+    font-size: 50px;
+    font-weight: 700;
+}
